Tests/typing/good/testfile-nothing-2.jl

function f() :: Int64
    nothing = 42
    nothing
end
